7847 loader: disk io should not use alloca() Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>